@@ -1,3 +1,7 @@
+3837.	[security]	A NULL pointer is passed to query_prefetch resulting
+			a REQUIRE assertion failure when a fetch is actually
+			initiated.  [ RT #35899]
+
 	--- 9.10.0 released ---
 
 3824.	[bug]		A collision between two flag values could cause
